# uniprop

./: CMakeLists.txt  tables.cpp  unicode.py
include/booltrie/: is.h++
include/booltrie_plus/: is.h++
include/booltrie_plus_avx/: is.h++  structs.h++
include/common/: bench.h++  general_category.h++  structs.h++
include/range_bsearch/: is.h++
src/booltrie/: CMakeLists.txt
src/booltrie_plus/: CMakeLists.txt
src/booltrie_plus_avx/: CMakeLists.txt  tables.c++
src/range_bsearch/: CMakeLists.txt  tables.c++
src/runner/: CMakeLists.txt  benches.c++  benches_avx.c++  runner.c++
